--- a/Carekhun Application/sample/src/main/res/layout/sensor_activity_main.xml
+++ b/Carekhun Application/sample/src/main/res/layout/sensor_activity_main.xml
@@ -370,8 +370,8 @@
                         <TextView
                             android:id="@+id/tv_rate"
                             android:layout_width="wrap_content"
-                            android:text="0"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:text="0" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -383,8 +383,8 @@
                             android:id="@+id/tv_lowest_rate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"
+                            android:text="0" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -394,10 +394,10 @@
 
                         <TextView
                             android:id="@+id/tv_verage_rate"
-                            android:text="0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"
+                            android:text="0" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -409,8 +409,8 @@
                             android:id="@+id/tv_highest_rate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"
+                            android:text="0" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -461,69 +461,49 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-            <Button
-                android:id="@+id/btn_rate_start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/rate_test_start"
-                android:layout_weight="0.53" />
+                <Button
+                    android:id="@+id/btn_rate_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/rate_test_start"
+                    android:layout_weight="0.53" />
 
-            <Button
-                android:id="@+id/btn_rate_stop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/rate_test_stop"
-                android:layout_weight="0.47" />
+                <Button
+                    android:id="@+id/btn_rate_stop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/rate_test_stop"
+                    android:layout_weight="0.47" />
 
-        </LinearLayout>
+            </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-            <Button
-                android:id="@+id/open_alarm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/open_alarm_clock"
-                android:layout_weight="0.85" />
+                <Button
+                    android:id="@+id/open_alarm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/open_alarm_clock"
+                    android:layout_weight="0.70" />
 
-            <Button
-                android:id="@+id/close_alarm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/close_alarm_clock"
-                android:layout_weight="0.15"
+                <Button
+                    android:id="@+id/close_alarm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/close_alarm_clock"
+                    android:layout_weight="0.30"
                 />
-
-        </LinearLayout>
-
-            <Button
-                android:id="@+id/push_message_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:theme="@style/ThemeOverlay.MyDarkButton"
-                android:visibility="invisible"
-                android:text="@string/push_message_content" />
-
-            <Button
-                android:id="@+id/unit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:theme="@style/ThemeOverlay.MyDarkButton"
-                android:visibility="invisible"
-                android:text="@string/unit" />
-
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
