--- a/Carekhun Application/sample/src/main/res/values-w820dp/strings_activity_login.xml
+++ b/Carekhun Application/sample/src/main/res/values-w820dp/strings_activity_login.xml
@@ -1,10 +1,10 @@
-<resources>
-    <string name="title_activity_login">Join</string>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
 
-    <!-- Strings related to login -->
+    <string name="title_activity_login">Join</string>
     <string name="prompt_username">What\'s your nickname?</string>
     <string name="action_sign_in">Join</string>
     <string name="action_sign_in_short">Join</string>
-
     <string name="error_field_required">This field is required</string>
+
 </resources>
