--- a/Carekhun Application/sample/src/main/res/layout/activity_anonymous_auth.xml
+++ b/Carekhun Application/sample/src/main/res/layout/activity_anonymous_auth.xml
@@ -41,7 +41,7 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:theme="@style/ThemeOverlay.MyDarkButton"
-			android:text="@string/sign_in"/>
+			android:text="Sign in"/>
 
 		<Button
 			android:id="@+id/button_anonymous_sign_out"
