--- a/Carekhun Application/sample/src/main/res/layout/activity_emailpassword.xml
+++ b/Carekhun Application/sample/src/main/res/layout/activity_emailpassword.xml
@@ -71,7 +71,7 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
-			android:text="@string/sign_in"
+			android:text="Sign in"
 			android:theme="@style/ThemeOverlay.MyDarkButton"/>
 
 		<Button
